# neat_experiments

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
examples/: play_tictactoe.rs  tictactoe_demo.rs  tictactoe_evolve.rs  tictactoe_evolve_minimax.rs  xor_test.rs
examples/tictactoe/: cli.rs  evaluate.rs  evaluate_minimax.rs  game.rs  minimax.rs  mod.rs  neat_agent.rs  size_penalty.rs  tests.rs
src/: lib.rs  main.rs  main_old.rs
src/neat/: common.rs  common_functional.rs  common_old.rs  copilot_demo.rs  copilot_demo_stateful.rs  demo.rs  evolution.rs  genome.rs  graph.rs  innovation.rs  mod.rs  network.rs  organism.rs  phenome.md  phenome.rs  phenome_old.rs  population.rs  population_old.rs  round_trip.rs  species.rs  stats.rs  vector.rs
src/neat/genome/: crossover.rs  distance.rs  init.rs  innovation.rs  mod.rs  mutation.rs  pruning.rs  tests.rs  types.rs
src/tictactoe/: cli.rs  display.rs  game.rs  mod.rs
tests/: tictactoe_test.rs  xor_test.rs
tests/tictactoe/: display.rs
