[package]
name = "neat_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
# rand_chacha = "0.3.1"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rayon = "1.10.0"
itertools = "0.13.0"
crossterm = "0.28.1"
indexmap = {version = "2.5.0", features = ["serde"]}
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
rmp-serde = "1.3.0"
