[package]
name = "neat_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.10.0"
rayon = "1.10.0"
itertools = "0.13.0"
crossterm = "0.28.1"
indexmap = "2.5.0"
rustc-hash = "2.0.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rand_core = "0.10.0"
